--- a/Register Page.html
+++ b/Register Page.html
@@ -1,108 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Daura Youth Camp Registration</title>
-  <!-- ✅ Tailwind CSS CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Daura Youth Camp Registration</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800">
 
-  <!-- Header (Blue) -->
-  <header class="bg-blue-700 text-white text-center py-8">
-    <h2 class="text-3xl font-bold">Register for Daura Youth Camp 2025</h2>
-    <p class="mt-2 text-lg">Fill in the form below to secure your spot</p>
-  </header>
+    <header class="bg-blue-700 text-white text-center py-8">
+        <h2 class="text-3xl font-bold">Register for Daura Youth Camp 2025</h2>
+        <p class="mt-2 text-lg">Fill in the form below to secure your spot</p>
+    </header>
 
-  <!-- Main -->
-  <main class="flex justify-center items-center p-6">
-    <form id="registrationForm" class="bg-white p-8 rounded-2xl shadow-lg w-full max-w-lg transform transition duration-500 hover:scale-105">
-      <h2 class="text-2xl font-bold text-center text-blue-700 mb-6">Registration Form</h2>
+    <main class="flex justify-center items-center p-6">
+        <form id="registrationForm" class="bg-white p-8 rounded-2xl shadow-lg w-full max-w-lg transform transition duration-500 hover:scale-105">
+            <h2 class="text-2xl font-bold text-center text-blue-700 mb-6">Registration Form</h2>
 
-      <!-- Full Name -->
-      <div class="mb-4">
-        <label for="name" class="block font-semibold text-blue-700 mb-2">Full Name</label>
-        <input type="text" id="name" name="name" placeholder="Enter your full name" required
-          class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-      </div>
+            <div class="mb-4">
+                <label for="name" class="block font-semibold text-blue-700 mb-2">Full Name</label>
+                <input type="text" id="name" name="name" placeholder="Enter your full name" required
+                    class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+            </div>
 
-      <!-- Email -->
-      <div class="mb-4">
-        <label for="email" class="block font-semibold text-blue-700 mb-2">Email</label>
-        <input type="email" id="email" name="email" placeholder="Enter your email" required
-          class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-      </div>
+            <div class="mb-4">
+                <label for="email" class="block font-semibold text-blue-700 mb-2">Email</label>
+                <input type="email" id="email" name="email" placeholder="Enter your email" required
+                    class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+            </div>
 
-      <!-- Phone -->
-      <div class="mb-4">
-        <label for="number" class="block font-semibold text-blue-700 mb-2">Phone Number</label>
-        <input type="tel" id="number" name="number" placeholder="Enter your phone number" required
-          class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-      </div>
+            <div class="mb-4">
+                <label for="number" class="block font-semibold text-blue-700 mb-2">Phone Number</label>
+                <input type="tel" id="number" name="number" placeholder="Enter your phone number" required
+                    class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+            </div>
 
-      <!-- Age + Gender -->
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
-        <div>
-          <label for="age" class="block font-semibold text-blue-700 mb-2">Age</label>
-          <input type="number" id="age" name="age" placeholder="Your age" required
-            class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-        </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
+                <div>
+                    <label for="age" class="block font-semibold text-blue-700 mb-2">Age</label>
+                    <input type="number" id="age" name="age" placeholder="Your age" required
+                        class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+                </div>
 
-        <div>
-          <label for="gender" class="block font-semibold text-blue-700 mb-2">Gender</label>
-          <select id="gender" name="gender" required
-            class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-            <option value="">--Select--</option>
-            <option value="male">Male</option>
-            <option value="female">Female</option>
-          </select>
-        </div>
-      </div>
+                <div>
+                    <label for="gender" class="block font-semibold text-blue-700 mb-2">Gender</label>
+                    <select id="gender" name="gender" required
+                        class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+                        <option value="">--Select--</option>
+                        <option value="male">Male</option>
+                        <option value="female">Female</option>
+                    </select>
+                </div>
+            </div>
 
-      <!-- Submit Button (Blue) -->
-      <button type="submit"
-        class="w-full py-3 bg-blue-600 text-white font-bold rounded-lg hover:bg-blue-700 transition">
-        Submit Registration
-      </button>
+            <button type="submit"
+                class="w-full py-3 bg-blue-600 text-white font-bold rounded-lg hover:bg-blue-700 transition">
+                Submit Registration
+            </button>
+            <p class="text-center mt-3 text-sm text-gray-600">You will be redirected to your dashboard after submission.</p>
+        </form>
+    </main>
 
-      <p class="text-center mt-3 text-sm text-gray-600">You will receive a confirmation email after submission.</p>
+    <script>
+        document.getElementById("registrationForm").addEventListener("submit", function(event) {
+            event.preventDefault(); // Stop the form from submitting normally
 
-      <!-- Success message -->
-      <p id="successMessage" class="hidden mt-4 text-green-600 font-semibold text-center">✅ Registration Successful! We’ll contact you soon.</p>
-    </form>
-  </main>
+            const name = document.getElementById("name").value.trim();
+            const email = document.getElementById("email").value.trim();
+            const number = document.getElementById("number").value.trim();
+            const age = document.getElementById("age").value.trim();
+            const gender = document.getElementById("gender").value;
 
-  <!-- ✅ JavaScript -->
-  <script>
-    document.getElementById("registrationForm").addEventListener("submit", function(event) {
-      event.preventDefault(); // stop real submission
+            // Check if any field is empty
+            if (!name || !email || !number || !age || !gender) {
+                alert("⚠️ Please fill in all fields before submitting.");
+                return;
+            }
 
-      const name = document.getElementById("name").value.trim();
-      const email = document.getElementById("email").value.trim();
-      const number = document.getElementById("number").value.trim();
-      const age = document.getElementById("age").value.trim();
-      const gender = document.getElementById("gender").value;
-      const successMessage = document.getElementById("successMessage");
+            // Simple email format validation
+            const emailPattern = /^[^ ]+@[^ ]+\.[a-z]{2,3}$/;
+            if (!email.match(emailPattern)) {
+                alert("⚠️ Please enter a valid email address.");
+                return;
+            }
 
-      if (!name || !email || !number || !age || !gender) {
-        alert("⚠️ Please fill in all fields before submitting.");
-        return;
-      }
-
-      const emailPattern = /^[^ ]+@[^ ]+\.[a-z]{2,3}$/;
-      if (!email.match(emailPattern)) {
-        alert("⚠️ Please enter a valid email address.");
-        return;
-      }
-
-      // Show success message inside the form
-      successMessage.classList.remove("hidden");
-
-      // Reset form
-      this.reset();
-    });
-  </script>
+            // Redirect to the dashboard page after a slight delay
+            setTimeout(() => {
+                window.location.href = "dashboard.html";
+            }, 500); // Redirect after 0.5 seconds
+        });
+    </script>
 
 </body>
 </html>
