--- a/dashboard.html
+++ b/dashboard.html
@@ -47,7 +47,7 @@
                 <a href="#"><i class="bi bi-calendar-event"></i> My Schedule</a>
                 <a href="#"><i class="bi bi-megaphone"></i> Announcements</a>
                 <a href="#"><i class="bi bi-download"></i> Resources</a>
-                <a href="#"><i class="bi bi-box-arrow-right"></i> Logout</a>
+                <a href="Welcomepage.html"><i class="bi bi-box-arrow-right"></i> Logout</a>
             </div>
 
             <div class="col-md-10 p-4">
@@ -113,4 +113,5 @@
         });
     </script>
 </body>
+
 </html>
